Fix top bar inconsistencies on smaller screens

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,16 +2,19 @@
     display: flex;
     justify-content: space-between;
     margin: 15px;
-    z-index: 2;
+    /*z-index: 2;*/
 }
 
 .top-bar h1 {
     margin: 0;
 }
 
-@media screen and (max-width: 600px) {
-    .top-bar {
+@media screen and (max-width: 700px) {
+    .banner {
         display: none;
+    }
+    .top-bar {
+        justify-content: center;
     }
 }
 
@@ -32,4 +35,10 @@
     align-items: center;
     width: 70%;
     max-height: 85%;
+}
+
+@media screen and (max-width: 1000px) {
+    .gameboard {
+        max-height: 75%;
+    }
 }
